--- a/index.html
+++ b/index.html
@@ -3,21 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Salman Joyia | AI Automation Engineer & FastAPI Developer</title>
-    <meta name="description" content="Salman Joyia is an AI Automation Engineer specializing in n8n, Make.com, FastAPI, AI agents, and workflow automation. Building intelligent systems that save time and scale operations." />
+    
+    <!-- Primary Meta Tags -->
+    <title>Salman Joyia | Enterprise AI & Automation Architect | n8n, Make.com, FastAPI Expert</title>
+    <meta name="title" content="Salman Joyia | Enterprise AI & Automation Architect" />
+    <meta name="description" content="12+ years of experience transforming operations for Fortune 500 companies. Specializing in AI automation, RPA, workflow optimization, and intelligent systems that deliver $15M+ in measurable value." />
     <meta name="author" content="Salman Joyia" />
-    <meta name="keywords" content="AI Automation, FastAPI, n8n, Make.com, AI Agents, Workflow Automation, Python Developer" />
+    <meta name="keywords" content="AI Automation Engineer, Enterprise Automation, RPA, n8n, Make.com, Zapier, FastAPI, Python Developer, Workflow Automation, Process Automation, AI Architect, Automation Consultant" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
 
-    <meta property="og:title" content="Salman Joyia | AI Automation Engineer" />
-    <meta property="og:description" content="Building AI-powered automation systems that save time, reduce cost, and scale operations." />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://salmanjoyia.com/" />
+    <meta property="og:title" content="Salman Joyia | Enterprise AI & Automation Architect" />
+    <meta property="og:description" content="12+ years transforming Fortune 500 operations. AI automation, RPA, and intelligent workflows delivering $15M+ in measurable value." />
+    <meta property="og:image" content="https://salmanjoyia.com/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Salman Joyia - Enterprise AI & Automation Architect" />
+    <meta property="og:site_name" content="Salman Joyia" />
+    <meta property="og:locale" content="en_US" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Salman Joyia | AI Automation Engineer" />
-    <meta name="twitter:description" content="Building AI-powered automation systems that save time, reduce cost, and scale operations." />
+    <meta name="twitter:url" content="https://salmanjoyia.com/" />
+    <meta name="twitter:title" content="Salman Joyia | Enterprise AI & Automation Architect" />
+    <meta name="twitter:description" content="12+ years transforming Fortune 500 operations. AI automation, RPA, and intelligent workflows delivering $15M+ in measurable value." />
+    <meta name="twitter:image" content="https://salmanjoyia.com/og-image.jpg" />
+    <meta name="twitter:image:alt" content="Salman Joyia - Enterprise AI & Automation Architect" />
+    <meta name="twitter:creator" content="@salmanjoyia" />
 
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://salmanjoyia.com/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+    <!-- DNS Prefetch & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="https://formspree.io" />
+    <link rel="dns-prefetch" href="https://www.google-analytics.com" />
+    
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
 
