--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Salman Joyia | Enterprise AI & Automation Architect | n8n, Make.com, FastAPI Expert</title>
+    <title>Muhammad Salman Iqbal | Enterprise AI & Automation Architect | n8n, Make.com, FastAPI Expert</title>
     <meta name="title" content="Salman Joyia | Enterprise AI & Automation Architect" />
     <meta name="description" content="12+ years of experience transforming operations for Fortune 500 companies. Specializing in AI automation, RPA, workflow optimization, and intelligent systems that deliver $15M+ in measurable value." />
     <meta name="author" content="Salman Joyia" />
