--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     
     <!-- Primary Meta Tags -->
     <title>Muhammad Salman Iqbal | Enterprise AI & Automation Architect | n8n, Make.com, FastAPI Expert</title>
-    <meta name="title" content="Salman Joyia | Enterprise AI & Automation Architect" />
+    <meta name="title" content="Muhammad Salman Iqbal | Enterprise AI & Automation Architect" />
     <meta name="description" content="12+ years of experience transforming operations for Fortune 500 companies. Specializing in AI automation, RPA, workflow optimization, and intelligent systems that deliver $15M+ in measurable value." />
-    <meta name="author" content="Salman Joyia" />
+    <meta name="author" content="Muhammad Salman Iqbal" />
     <meta name="keywords" content="AI Automation Engineer, Enterprise Automation, RPA, n8n, Make.com, Zapier, FastAPI, Python Developer, Workflow Automation, Process Automation, AI Architect, Automation Consultant" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
@@ -17,28 +17,29 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://salmanjoyia.com/" />
-    <meta property="og:title" content="Salman Joyia | Enterprise AI & Automation Architect" />
+    <meta property="og:title" content="Muhammad Salman Iqbal | Enterprise AI & Automation Architect" />
     <meta property="og:description" content="12+ years transforming Fortune 500 operations. AI automation, RPA, and intelligent workflows delivering $15M+ in measurable value." />
     <meta property="og:image" content="https://salmanjoyia.com/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Salman Joyia - Enterprise AI & Automation Architect" />
-    <meta property="og:site_name" content="Salman Joyia" />
+    <meta property="og:image:alt" content="Muhammad Salman Iqbal - Enterprise AI & Automation Architect" />
+    <meta property="og:site_name" content="Muhammad Salman Iqbal" />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://salmanjoyia.com/" />
-    <meta name="twitter:title" content="Salman Joyia | Enterprise AI & Automation Architect" />
+    <meta name="twitter:title" content="Muhammad Salman Iqbal | Enterprise AI & Automation Architect" />
     <meta name="twitter:description" content="12+ years transforming Fortune 500 operations. AI automation, RPA, and intelligent workflows delivering $15M+ in measurable value." />
     <meta name="twitter:image" content="https://salmanjoyia.com/og-image.jpg" />
-    <meta name="twitter:image:alt" content="Salman Joyia - Enterprise AI & Automation Architect" />
+    <meta name="twitter:image:alt" content="Muhammad Salman Iqbal - Enterprise AI & Automation Architect" />
     <meta name="twitter:creator" content="@salmanjoyia" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://salmanjoyia.com/" />
 
     <!-- Favicon -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
