--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <link rel="canonical" href="https://salmanjoyia.com/" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <link rel="shortcut icon" href="/favicon.svg" />
+    <link rel="icon" href="/logo.svg" type="image/svg+xml" />
+    <link rel="shortcut icon" href="/logo.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="mask-icon" href="/logo.svg" color="#0f766e" />
     <link rel="apple-touch-icon" href="/logo.svg" />
