--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://salmanjoyia.com/" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="/logo.svg" type="image/svg+xml" />
-    <link rel="shortcut icon" href="/logo.svg" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="mask-icon" href="/logo.svg" color="#0f766e" />
-    <link rel="apple-touch-icon" href="/logo.svg" />
+    <!-- Favicon (cache-busted) -->
+    <link rel="icon" href="/logo.svg?v=2" type="image/svg+xml" />
+    <link rel="shortcut icon" href="/logo.svg?v=2" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
+    <link rel="mask-icon" href="/logo.svg?v=2" color="#0f766e" />
+    <link rel="apple-touch-icon" href="/logo.svg?v=2" />
     <meta name="theme-color" content="#0ea5a4" />
 
     <!-- DNS Prefetch & Preconnect -->
